--- a/text.css
+++ b/text.css
@@ -177,7 +177,7 @@ body {
     width: 100%;
     height: 320px;
     margin-bottom: 20px;
-    background: url("images/background.webp") no-repeat;
+    background: url("Images/background.webp") no-repeat;
     background-size: 100% 320px;
     color: #FFF;
     border-radius: 15px;
